--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 09:39:00 PM</p>
+    <p class="lastupdate">09/10/2020 09:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.3&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.3&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.3&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">47.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.012 inHg (0.028)</td>
+        <td class="data">30.014 inHg (0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 6 hours, 52 minutes</td>
+      <td class="data">9 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 6 hours, 52 minutes</td>
+      <td class="data">9 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
