--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 10:34:00 PM</p>
+    <p class="lastupdate">09/10/2020 10:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.017 inHg (0.039)</td>
+        <td class="data">30.019 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -409,7 +409,7 @@
         <td class="data new_row hilo_day">
           0</td>
         <td class="data new_row hilo_week">
-          2</td>
+          1</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 7 hours, 47 minutes</td>
+      <td class="data">9 days, 7 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 7 hours, 47 minutes</td>
+      <td class="data">9 days, 7 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
