--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 10:49:00 PM</p>
+    <p class="lastupdate">09/10/2020 10:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,8 +153,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">52.8<br/>
             <span class="timestamp">06:03:54 PM</span><br/>
-            45.7<br/>
-            <span class="timestamp">12:06:48 AM</span>
+            45.5<br/>
+            <span class="timestamp">10:52:29 PM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            343
+            339
           </td>
           <td class="data new_row">
             0<br/>
