--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 06:34:00 AM</p>
+    <p class="lastupdate">09/11/2020 06:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">48.4&#176;F</td>
+        <td class="data">48.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">48.4&#176;F</td>
+        <td class="data">48.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">48.4&#176;F</td>
+        <td class="data">48.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.7&#176;F</td>
+        <td class="data">45.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">87%</td>
+        <td class="data">88%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.028 inHg (0.015)</td>
+        <td class="data">30.029 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.3&#176;F</td>
+        <td class="data">71.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -375,8 +375,8 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:04:08 AM">
-            2</span><br/>
+          <span title="06:35:53 AM">
+            3</span><br/>
           210
         </td>
         <td class="data new_row hilo_week">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 15 hours, 47 minutes</td>
+      <td class="data">9 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 15 hours, 47 minutes</td>
+      <td class="data">9 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
